# pub-credit-risk-fred-stlouis

./: .dockerignore  .env.example  .gitignore  Dockerfile  LICENSE  README.md  docker-compose.yml  makefile  pyproject.toml  settings.py  test_endpoints.sh
.github/workflows/: ci-cd.yml
app/: main.py
app/artifacts/: __init__.py
app/artifacts/infrastructure/: __init__.py  celery_app.py  repository.py
app/artifacts/models/: __init__.py  artifacts.py
app/artifacts/service/: __init__.py  tasks.py
app/data/: __init__.py
app/data/core/: __init__.py  fetch.py
app/data/routes/: __init__.py  generate.py
app/data/schemas/: dataset.py
app/data/service/: __init__.py  generate.py
app/evaluate/: __init__.py
app/evaluate/core/: evaluate.py
app/evaluate/routes/: __init__.py  evaluate.py
app/evaluate/schemas/: evaluate.py
app/evaluate/service/: __init__.py  evaluate.py
app/prune/: __init__.py
app/prune/core/: __init__.py  prune.py
app/prune/routes/: __init__.py  prune.py
app/prune/schemas/: prune.py
app/prune/service/: __init__.py  (+1 more)
app/train/: __init__.py
docs/: API.md  ARCHITECTURE.md  ARTIFACTS.md  DATASET_GENERATION.md  ROADMAP.md  TESTING.md  TROUBLESHOOTING.md
tests/: conftest.py
tests/evaluate/: test_evaluate_service.py
tests/integration/: test_database.py
tests/prune/: test_prune_service.py
tests/routes/: test_celery_tasks.py  test_evaluate_route.py  test_generate_route.py  test_prune_route.py  test_train_route.py
tests/services/: test_generate_service.py
tests/train/: test_train_service.py
utils/: cache.py  logger.py
(+6 files in other folders)
